index.html after updation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>first program</title>
 	</head>
 	<body>
-		<h1>Sowmya Reddy Adavelli</h1>
+		<h1 style="background:red";align="center">Sowmya Reddy Adavelli</h1>
 	</body>
 </html>
 ;wq
