--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 		<title>first program</title>
 	</head>
 	<body>
+	
 		<h1 style="background:red",align="centre">Sowmya Reddy Adavelli</h1>
+		<p>data enterd using master</p>
 	</body>
 </html>
 
